--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.calculator">
+    package="com.example.poly_playgroundd">
    <application
-        android:label="calculator"
+        android:label="poly_playgroundd"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
